<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_concern"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/appBackground"
    tools:context="c371g2.ltc_safety.a_new.NewConcernActivity">

...
                android:maxLines="1"
                android:ems="10"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:id="@+id/newConcern_nameTextField" />

            <View
                android:background="@color/lighter_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

...
                android:maxLines="1"
                android:ems="10"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:id="@+id/newConcern_phoneNumberField" />

            <View
                android:background="@color/lighter_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

...
                android:maxLines="1"
                android:ems="10"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:id="@+id/newConcern_emailTextField" />

        </LinearLayout>

        <!-- LocalConcern information -->

        <TextView
...
                android:maxLines="1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:freezesText="true"
                android:id="@+id/newConcern_concernNatureChooser"/>

            <View
                android:background="@color/lighter_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

...
                android:maxLines="1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:freezesText="true"
                android:id="@+id/newConcern_facilityChooser"/>

            <View
                android:background="@color/lighter_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

...
                android:maxLines="1"
                android:ems="10"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:id="@+id/newConcern_roomNumberField" />

        </LinearLayout>

        <!-- Description -->

        <TextView
...
                android:textSize="20sp"
                android:ems="10"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="4dp"
                android:paddingEnd="0dp"
                android:id="@+id/newConcern_descriptionField" />
        </LinearLayout>

        <!-- Actions taken -->

        <TextView
            android:layout_width="wrap_content"
...
                android:textSize="20sp"
                android:ems="10"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="4dp"
                android:paddingEnd="0dp"
                android:id="@+id/newConcern_actionsTakenField" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

...
            <Button
                android:background="@android:color/white"
                android:textColor="@color/colorPrimary"
                android:text="@string/submit_concern_button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newConcern_submitConcernButton"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

...
